# universal_remote_control

./: .gitignore  CHANGELOG.md  DOCS.md  FIX_WINDOWS_BUILD.md  GITHUB_ACTIONS_FIX_SUMMARY.md  PROJECT_FILES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build.yml  release.yml  test.yml
android/: build.gradle  local.properties.example  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/universal_remote_control/: InputSimulatorPlugin.kt  MainActivity.kt  RemoteControlAccessibilityService.kt
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  GITHUB_ACTIONS_GUIDE.md
lib/: main.dart
lib/core/: device_discovery.dart  protocol.dart
lib/models/: connection_state.dart  control_event.dart  device_info.dart
lib/services/: input_capture_service.dart  input_simulator_service.dart  platform_input_service.dart  websocket_service.dart  windows_input_service.dart  windows_input_service_stub.dart
lib/ui/pages/: controlled_page.dart  controller_page.dart  debug_log_page.dart  device_list_page.dart  home_page.dart  qr_scanner_page.dart
lib/ui/widgets/: gyro_controller.dart  virtual_keyboard.dart  virtual_touchpad.dart
lib/utils/: animations.dart  performance_manager.dart  platform_helper.dart  qr_code_helper.dart  responsive_helper.dart
native/android/: AndroidManifest_snippet.xml  InputSimulatorPlugin.kt  README.md  RemoteControlAccessibilityService.kt  accessibility_service_config.xml
native/linux/: CMakeLists.txt  README.md  input_simulator.cpp
native/macos/: CMakeLists.txt  README.md  input_simulator.cpp
native/windows/: CMakeLists.txt  README.md  input_simulator.cpp
scripts/: README.md  build_all.bat  build_all.sh  build_android.bat  build_android.sh  build_native_libs.bat  build_native_libs.sh  generate_icons.bat  generate_icons.sh
test/models/: control_event_test.dart  device_info_test.dart
